--- a/TestModelClasses/TestModelClasses.csproj
+++ b/TestModelClasses/TestModelClasses.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{24252B6B-D2A8-481E-B9FE-6F76FB16B7E9}</ProjectGuid>
+    <ProjectGuid>{00CDB10E-832E-422D-98AF-85CBF68C29D1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Postulate.WinForms</RootNamespace>
-    <AssemblyName>Postulate.WinForms</AssemblyName>
+    <RootNamespace>Test2.Models</RootNamespace>
+    <AssemblyName>TestModelClasses</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,10 +31,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=1.50.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.50.2\lib\net451\Dapper.dll</HintPath>
+    </Reference>
+    <Reference Include="PostulateOrm, Version=0.9.169.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Postulate.Orm.0.9.169\lib\net461\PostulateOrm.dll</HintPath>
+    </Reference>
+    <Reference Include="ReflectionHelper, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AoReflectionHelper.1.0.1\lib\net461\ReflectionHelper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,31 +52,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ComboBoxExtensions.cs" />
-    <Compile Include="Controls\ValidationPanel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\ValidationPanel.Designer.cs">
-      <DependentUpon>ValidationPanel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormBinder.cs" />
-    <Compile Include="GridViewBinder.cs" />
-    <Compile Include="ListItem.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="Item.cs" />
+    <Compile Include="Order.cs" />
+    <Compile Include="OrderItem.cs" />
+    <Compile Include="Organization.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextBoxValidator.cs" />
+    <Compile Include="State.cs" />
+    <Compile Include="TdgDb.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Postulate.Orm">
-      <Version>0.9.169</Version>
-    </PackageReference>
-    <PackageReference Include="Postulate.Sql">
-      <Version>1.0.16</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Controls\ValidationPanel.resx">
-      <DependentUpon>ValidationPanel.cs</DependentUpon>
-    </EmbeddedResource>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>"C:\Users\Adam\AppData\Local\Adam O'Neil Software\Postulate Schema Merge\PostulateMergeUI.exe" "$(TargetPath)"
+</PostBuildEvent>
+  </PropertyGroup>
 </Project>
