--- a/TestWinForms/TestWinForms.csproj
+++ b/TestWinForms/TestWinForms.csproj
@@ -51,15 +51,10 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\Customer.cs" />
-    <Compile Include="Models\Item.cs" />
-    <Compile Include="Models\Order.cs" />
-    <Compile Include="Models\OrderItem.cs" />
-    <Compile Include="Models\Organization.cs" />
-    <Compile Include="Models\TdgDb.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\OrgSelect.cs" />
+    <Compile Include="Queries\StateSelect.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -90,14 +85,22 @@
       <Project>{24252b6b-d2a8-481e-b9fe-6f76fb16b7e9}</Project>
       <Name>Postulate.WinForms</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TestModelClasses\TestModelClasses.csproj">
+      <Project>{00cdb10e-832e-422d-98af-85cbf68c29d1}</Project>
+      <Name>TestModelClasses</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Postulate.Orm">
-      <Version>0.9.168</Version>
+      <Version>0.9.169</Version>
     </PackageReference>
     <PackageReference Include="Postulate.Sql">
       <Version>1.0.16</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
 </Project>
