--- a/Postulate.WinForms/Postulate.WinForms.csproj
+++ b/Postulate.WinForms/Postulate.WinForms.csproj
@@ -53,7 +53,7 @@
     <Compile Include="GridViewBinder.cs" />
     <Compile Include="ListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RadioButtonBinder.cs" />
+    <Compile Include="RadioButtonDictionary.cs" />
     <Compile Include="TextBoxValidator.cs" />
   </ItemGroup>
   <ItemGroup>
