FormBinderToolStrip added, core functionality in place

--- a/Postulate.WinForms/Postulate.WinForms.csproj
+++ b/Postulate.WinForms/Postulate.WinForms.csproj
@@ -43,6 +43,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComboBoxExtensions.cs" />
+    <Compile Include="Controls\FormBinderToolStrip.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controls\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Controls\ValidationPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -70,9 +78,22 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Controls\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\ValidationPanel.resx">
       <DependentUpon>ValidationPanel.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icon-delete.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\action_add_16xLG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\save_16xLG.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
